force-app/main/default/objects/Banks_with_Industry__c/Banks_with_Industry__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Banks based on Industry</label>
</CustomObject>