force-app/main/default/objects/Banks_with_Industry__c/fields/Additional_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Additional_Solutions__c</fullName>
    <label>Additional Solutions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>