force-app/main/default/objects/Banks_with_Industry__c/fields/Bank1__c.field-meta.xml
<CustomField>
    <fullName>Bank1__c</fullName>
    <label>Bank1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>