force-app/main/default/objects/Banks_with_Industry__c/fields/Bank2__c.field-meta.xml
<CustomField>
    <fullName>Bank2__c</fullName>
    <label>Bank2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>