force-app/main/default/objects/Banks_with_Industry__c/fields/Bank3__c.field-meta.xml
<CustomField>
    <fullName>Bank3__c</fullName>
    <label>Bank3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>