force-app/main/default/objects/Banks_with_Industry__c/fields/Industry_Name__c.field-meta.xml
<CustomField>
    <fullName>Industry_Name__c</fullName>
    <label>Industry Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>